# finance-app

./: .env.db.example  .env.pgadmin  .env.pgadmin.example  .env.web.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  supervisord.conf
finance_app/: settings.py  urls.py
templates/: base.html  charts.html  index.html  transactions-list.html
templates/account/: login.html  signup.html
templates/partials/: charts-container.html  create-transaction.html  import-transaction.html  navbar.html  transaction-form.html  transaction-success.html  transactions-container.html  update-transaction.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
tracker/: admin.py  charting.py  factories.py  filters.py  forms.py  managers.py  models.py  resources.py  urls.py  views.py
tracker/management/commands/: generate_transactions.py
tracker/migrations/: 0001_initial.py  0002_category_transaction.py  0003_alter_transaction_options.py
tracker/tests/: conftest.py  test_models.py  test_views.py
